# amazon-bedrock-rag-with-langchain

./: app.py  create_db.py  pyproject.toml  readme.md
