[tool.poetry]
name = "bedrock-rag-app"
version = "0.1.0"
description = "Streamlit app using AWS Bedrock with RAG"
authors = ["silverstone <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.20"
streamlit = "^1.40.1"
langchain = "^0.3.7"
langchain-community = "^0.3.6"
langchain-aws = "^0.2.7"
pypdf = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
